added config for css files

--- a/_src/pages/_head.html
+++ b/_src/pages/_head.html
@@ -14,4 +14,6 @@
 
     <link type="image/x-icon" href="#" rel="shortcut icon">
     <link type="Image/x-icon" href="#" rel="icon">
+
+    <link rel="stylesheet" href="../styles/style.min.css">
 </head>
