--- a/_src/pages/index.html
+++ b/_src/pages/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 @@include('_head.html', {"title":"Index"})
 <body>
-
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate eaque eligendi eos eum fugit ipsa iste optio, quam ratione? Culpa eum magnam nihil non optio, placeat possimus repellat tenetur.
 @@include('_script.html')
 </body>
 </html>
