--- a/_src/pages/index.html
+++ b/_src/pages/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html lang="en">
-@@include('_head.html', {"title":"Index"})
+@@include('_head.html', {"title":"title"})
 <body>
+<div class="body-wrapper"> <!--!!! Необходимо Удалить !!!-->
+    @@include("sections/header.html")
+    <main>
 
-
+    </main>
+    @@include("sections/footer.html")
+</div>
 @@include('_script.html')
 </body>
 </html>
