added new task sprite.js

--- a/_src/pages/index.html
+++ b/_src/pages/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-@@include('_head.html', {"title":"title"})
+@@include('sections/_head.html', {"title":"title"})
 <body>
-    @@include("sections/header.html")
-    <main>
+@@include("sections/header.html")
+<main>
 
-    </main>
-    @@include("sections/footer.html")
-@@include('_script.html')
+</main>
+@@include("sections/footer.html")
+@@include('sections/_script.html')
 </body>
 </html>
