change folder for favicon

--- a/_src/pages/sections/_head.html
+++ b/_src/pages/sections/_head.html
@@ -12,10 +12,10 @@
 
     <title>@@title</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link type="image/x-icon" href="images/favicon.ico" rel="shortcut icon">
-    <link type="Image/x-icon" href="images/favicon.ico" rel="icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link type="image/x-icon" href="assets/favicon.ico" rel="shortcut icon">
+    <link type="Image/x-icon" href="assets/favicon.ico" rel="icon">
 
     <link rel="stylesheet" href="styles/style.min.css">
 </head>
