--- a/_src/pages/sections/_head.html
+++ b/_src/pages/sections/_head.html
@@ -17,5 +17,6 @@
     <link type="image/x-icon" href="assets/favicon.ico" rel="shortcut icon">
     <link type="Image/x-icon" href="assets/favicon.ico" rel="icon">
 
+    <link rel="stylesheet" href="styles/vendors.min.css">
     <link rel="stylesheet" href="styles/style.min.css">
 </head>
