--- a/_src/pages/index.html
+++ b/_src/pages/index.html
@@ -1,12 +1,34 @@
 <!doctype html>
 <html lang="en">
-@@include('sections/_head.html', {"title":"title"})
+@@include('sections/_head.html', {"title":"Customizator"})
 <body>
-@@include("sections/header.html")
-<main>
-
-</main>
-@@include("sections/footer.html")
+    <div class="container">
+        <h1 class="header">Some custom page</h1>
+        <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dignissimos eveniet molestiae ut ad neque voluptate est odio vel a ab voluptatum, quod, esse laudantium maiores doloremque iure. At, cumque?Vitae temporibus cumque aperiam eaque maiores, veniam a ad sequi aspernatur fugit perferendis, quis iure eligendi ipsam doloremque quibusdam quam laborum possimus id! Ut recusandae vero, rem labore saepe doloribus?
+        </div>
+        <hr>
+        <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dignissimos eveniet molestiae ut ad neque voluptate est odio vel a ab voluptatum, quod, esse laudantium maiores doloremque iure. At, cumque?Vitae temporibus cumque aperiam eaque maiores, veniam a ad sequi aspernatur fugit perferendis, quis iure eligendi ipsam doloremque quibusdam quam laborum possimus id! Ut recusandae vero, rem labore saepe doloribus?
+        </div>
+        <hr>
+        <div class="blocks">
+            <div class="blocks_item">
+                <img src="images/beach-4481919_1920.jpg" alt="some img">
+                <div class="blocks_item__descr">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum fugit totam consequatur nobis mollitia libero delectus! Eaque consectetur hic odit sint, a id, nesciunt veritatis, magnam excepturi repellendus architecto eveniet.
+                </div>
+            </div>
+            <div class="blocks_item">
+                <img src="images/cellular-4602489_1920.jpg" alt="some img">
+                <div class="blocks_item__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam dolor ut, temporibus dolorem enim consequatur, quisquam cupiditate quia illo odio veritatis reprehenderit doloremque ratione? Aut eveniet ullam doloremque unde.</div>
+            </div>
+            <div class="blocks_item">
+                <img src="images/vancouver-4640671_1920.jpg" alt="some img">
+                <div class="blocks_item__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam dolor ut, temporibus dolorem enim consequatur, quisquam cupiditate quia illo odio veritatis reprehenderit doloremque ratione? Aut eveniet ullam doloremque unde.</div>
+            </div>
+        </div>
+    </div>
 @@include('sections/_script.html')
 </body>
 </html>
