create section "modal-section" for settings-page

--- a/_src/pages/_settings-page.html
+++ b/_src/pages/_settings-page.html
@@ -4,7 +4,7 @@
 <body>
 <main class="settings-project-page container">
     @@include('components/typography.html')
-
+    @@include('snippets/popup-window.html')
 </main>
 
 @@include('sections/_script.html')
