create section "tabs" for settings-page

--- a/_src/pages/_settings-page.html
+++ b/_src/pages/_settings-page.html
@@ -4,7 +4,10 @@
 <body>
 <main class="settings-project-page container">
     @@include('components/typography.html')
+
     @@include('components/modal-window.html')
+
+    @@include('components/tabs.html')
 </main>
 
 @@include('sections/_script.html')
