delete modal-window and tabs

--- a/_src/pages/_settings-page.html
+++ b/_src/pages/_settings-page.html
@@ -3,11 +3,7 @@
 @@include('sections/_head.html', {"title":"settings-page"})
 <body>
 <main class="settings-project-page container">
-    @@include('components/typography.html')
-
-    @@include('components/modal-window.html')
-
-    @@include('components/tabs.html')
+    @@include('components/_typography.html')
 </main>
 
 @@include('sections/_script.html')
